--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -27,6 +27,9 @@
         android:layout_marginLeft="@dimen/_34sdp"
         android:textDirection="rtl"
         android:hint="الاسم"
+        android:imeOptions="actionDone"
+        android:singleLine="true"
+        android:inputType="text"
         android:textColorHint="@color/colorw"
         android:textColor="@color/colorw"
         android:paddingRight="@dimen/_7sdp"
@@ -44,11 +47,14 @@
         android:layout_marginRight="@dimen/_34sdp"
         android:layout_marginLeft="@dimen/_34sdp"
         android:hint="رقم الهاتف"
+        android:inputType="phone"
+        android:singleLine="true"
+        android:imeOptions="actionDone"
         android:textColorHint="@color/colorw"
         android:textColor="@color/colorw"
         android:fontFamily="@font/segoeui"
         android:paddingRight="@dimen/_7sdp"
-        android:textAlignment="textStart"
+        android:textAlignment="viewEnd"
         android:backgroundTint="@color/colorw"
         android:textSize="@dimen/_14sdp"/>
 
@@ -60,6 +66,9 @@
         android:layout_marginTop="@dimen/_25sdp"
         android:layout_marginRight="@dimen/_34sdp"
         android:layout_marginLeft="@dimen/_34sdp"
+        android:inputType="textEmailAddress"
+        android:imeOptions="actionDone"
+        android:singleLine="true"
         android:hint="البريد الالكتروني"
         android:textColorHint="@color/colorw"
         android:textColor="@color/colorw"
@@ -78,7 +87,10 @@
         android:layout_marginRight="@dimen/_34sdp"
         android:layout_marginLeft="@dimen/_34sdp"
         android:hint="كلمة المرور"
-        android:textAlignment="textStart"
+        android:inputType="textPassword"
+        android:singleLine="true"
+        android:imeOptions="actionDone"
+        android:textAlignment="viewEnd"
         android:textColorHint="@color/colorw"
         android:textColor="@color/colorw"
         android:paddingRight="@dimen/_7sdp"
