--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -29,6 +29,10 @@
             android:textDirection="rtl"
             android:layout_marginLeft="@dimen/_33sdp"
             android:hint="الاسم"
+            android:imeOptions="actionDone"
+            android:singleLine="true"
+            android:inputType="text"
+            android:textAlignment="viewEnd"
             android:textColorHint="@color/colorw"
             android:textColor="@color/colorw"
             android:fontFamily="@font/segoeui"
@@ -44,9 +48,13 @@
             android:layout_marginRight="@dimen/_33sdp"
             android:layout_marginLeft="@dimen/_33sdp"
             android:hint="كلمة المرور"
+            android:singleLine="true"
+            android:inputType="textPassword"
+            android:imeOptions="actionDone"
             android:textColorHint="@color/colorw"
             android:textColor="@color/colorw"
             android:fontFamily="@font/segoeui"
+            android:textAlignment="viewEnd"
             android:backgroundTint="@color/colorw"
             android:textSize="17dp"/>
 
