--- a/app/src/main/res/layout/activity_change_pass.xml
+++ b/app/src/main/res/layout/activity_change_pass.xml
@@ -67,6 +67,7 @@
 
 
                 <EditText
+                    android:id="@+id/editOldPassword"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/profile_info_bg"
@@ -90,6 +91,7 @@
 
 
                 <EditText
+                    android:id="@+id/editNewPassword"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/profile_info_bg"
@@ -113,6 +115,7 @@
 
 
                 <EditText
+                    android:id="@+id/editConfirmNewPassword"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/profile_info_bg"
@@ -133,6 +136,7 @@
 
 
         <Button
+            android:id="@+id/btnChangePassword"
             android:layout_width="@dimen/_100sdp"
             android:layout_height="@dimen/_35sdp"
             android:background="@color/colorOrange"
@@ -145,6 +149,7 @@
 
 
     <ProgressBar
+        android:id="@+id/loading"
         android:layout_width="@dimen/_50sdp"
         android:layout_height="@dimen/_50sdp"
         android:indeterminateTint="@color/colorOrange"
