--- a/app/src/main/res/layout/activity_edit__profile.xml
+++ b/app/src/main/res/layout/activity_edit__profile.xml
@@ -26,7 +26,6 @@
             android:layout_width="@dimen/_120sdp"
             android:layout_height="@dimen/_70sdp"
             android:src="@drawable/rostologo"
-
             android:scaleX="1.3"
             android:scaleY="1.3"
             android:layout_marginRight="10dp"
@@ -71,6 +70,7 @@
 
 
             <EditText
+                android:id="@+id/editUserNmeProfile"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/profile_info_bg"
@@ -80,7 +80,7 @@
                 android:imeOptions="actionDone"
                 android:textColor="@color/colorb"
                 android:singleLine="true"
-                android:drawablePadding="@dimen/_3sdp"
+                android:drawablePadding="@dimen/_5sdp"
                 android:gravity="center|right"/>
 
         </LinearLayout>
@@ -93,12 +93,13 @@
 
 
             <EditText
+                android:id="@+id/editEmailProfile"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/profile_info_bg"
                 android:drawableRight="@drawable/elevator"
                 android:paddingRight="@dimen/_5sdp"
-                android:drawablePadding="@dimen/_3sdp"
+                android:drawablePadding="@dimen/_5ssp"
                 android:textColor="@color/colorb"
                 android:inputType="textEmailAddress"
                 android:imeOptions="actionDone"
@@ -115,6 +116,7 @@
 
 
             <EditText
+                android:id="@+id/editPhoneProfile"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/profile_info_bg"
@@ -124,7 +126,7 @@
                 android:imeOptions="actionDone"
                 android:textColor="@color/colorb"
                 android:paddingRight="@dimen/_5sdp"
-                android:drawablePadding="@dimen/_3sdp"
+                android:drawablePadding="@dimen/_5ssp"
                 android:gravity="center|right"/>
 
         </LinearLayout>
@@ -134,6 +136,7 @@
         
 
         <Button
+            android:id="@+id/btnEditProfile"
             android:layout_width="@dimen/_100sdp"
             android:layout_height="@dimen/_35sdp"
             android:background="@color/colorOrange"
@@ -145,6 +148,7 @@
     </LinearLayout>
 
     <ProgressBar
+        android:id="@+id/loading"
         android:layout_width="@dimen/_50sdp"
         android:layout_height="@dimen/_50sdp"
         android:indeterminateTint="@color/colorOrange"
