--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,33 +8,11 @@
     tools:context=".Scenarios.ScenarioOne.Controller.MainActivity"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_130sdp">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_130sdp"
-            android:src="@drawable/imgmain_"
-            android:scaleType="fitXY"/>
-        
-        <ImageView
-            android:layout_width="@dimen/_120sdp"
-            android:layout_height="@dimen/_70sdp"
-            android:src="@drawable/rostologo"
-            android:scaleX="1.3"
-            android:scaleY="1.3"
-            android:layout_marginRight="10dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"/>
-
-    </RelativeLayout>
-
 
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1" />
 
     <View
