--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,190 +7,219 @@
     android:orientation="vertical"
     tools:context=".Scenarios.ScenarioSeven.Controller.Product_Details">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_130sdp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <ImageView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_130sdp"
-            android:scaleType="fitXY"
-            android:src="@drawable/imgmain_" />
+            android:layout_height="@dimen/_130sdp">
 
-        <ImageView
-            android:layout_width="@dimen/_120sdp"
-            android:layout_height="@dimen/_70sdp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginRight="10dp"
-            android:scaleX="1.3"
-            android:scaleY="1.3"
-            android:src="@drawable/rostologo" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_130sdp"
+                android:scaleType="fitXY"
+                android:src="@drawable/imgmain_" />
 
-    </RelativeLayout>
+            <ImageView
+                android:layout_width="@dimen/_120sdp"
+                android:layout_height="@dimen/_70sdp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginRight="10dp"
+                android:scaleX="1.3"
+                android:scaleY="1.3"
+                android:src="@drawable/rostologo" />
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_15sdp"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:layout_marginBottom="@dimen/_40sdp"
-        android:elevation="@dimen/_5sdp"
-        app:cardCornerRadius="@dimen/_5sdp"
-        app:cardElevation="@dimen/_5sdp"
-        app:cardMaxElevation="@dimen/_5sdp"
-        app:cardPreventCornerOverlap="true">
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_100sdp"
-                android:scaleType="fitXY" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:fontFamily="@font/thesansbold"
-                android:gravity="center"
-                android:singleLine="true"
-                android:textColor="@color/colorb" />
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/thesansbold"
-                android:gravity="center"
-                android:singleLine="true"
-                android:textColor="@color/colorb" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginBottom="@dimen/_40sdp"
+            android:elevation="@dimen/_5sdp"
+            app:cardCornerRadius="@dimen/_5sdp"
+            app:cardElevation="@dimen/_5sdp"
+            app:cardMaxElevation="@dimen/_5sdp"
+            app:cardPreventCornerOverlap="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_35sdp"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:gravity="center">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-
-                <TextView
-                    android:layout_width="@dimen/_30sdp"
-                    android:layout_height="@dimen/_30sdp"
-                    android:background="@drawable/inc_dec_bg"
-                    android:text="-"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:textColor="@color/colorw"
-                    android:textSize="@dimen/_17sdp"
-                    android:fontFamily="@font/thesansbold"
-                    android:textStyle="bold"/>
+                <ImageView
+                    android:id="@+id/imgProductDetails"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_100sdp"
+                    android:scaleType="fitXY" />
 
                 <TextView
-                    android:layout_width="@dimen/_50sdp"
-                    android:layout_height="@dimen/_30sdp"
+                    android:id="@+id/txtProductDetailsName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
                     android:fontFamily="@font/thesansbold"
-                    android:text="1"
-                    android:textColor="@color/colorb"
                     android:gravity="center"
-                    android:textSize="@dimen/_15sdp"/>
+                    android:singleLine="true"
+                    android:textColor="@color/colorb" />
+
 
                 <TextView
-                    android:layout_width="@dimen/_30sdp"
-                    android:layout_height="@dimen/_30sdp"
-                    android:background="@drawable/inc_dec_bg"
-                    android:text="+"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:textColor="@color/colorw"
-                    android:textSize="@dimen/_17sdp"
+                    android:id="@+id/txtProductDetailsDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/thesansbold"
-                    android:textStyle="bold"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_30sdp"
-                android:orientation="horizontal"
-                android:weightSum="1">
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:textColor="@color/colorb" />
 
                 <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.5">
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:gravity="center">
 
-                    <Spinner
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fontFamily="@font/thesansbold"
-                        android:gravity="center"
-                        android:paddingLeft="@dimen/_10sdp"
-                        android:text="meduim"
-                        android:textSize="@dimen/_12sdp">
-                    </Spinner>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.5">
 
                     <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="الحجم"
+                        android:id="@+id/txtProductDetailsDecrease"
+                        android:layout_width="@dimen/_30sdp"
+                        android:layout_height="@dimen/_30sdp"
+                        android:background="@drawable/inc_dec_bg"
                         android:fontFamily="@font/thesansbold"
-                        android:gravity="right|center"
-                        android:paddingRight="@dimen/_10sdp"
-                        android:textSize="@dimen/_12sdp"/>
+                        android:gravity="center_vertical|center_horizontal"
+                        android:text="-"
+                        android:textColor="@color/colorw"
+                        android:textSize="@dimen/_17sdp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txtProductDetailsNumber"
+                        android:layout_width="@dimen/_50sdp"
+                        android:layout_height="@dimen/_30sdp"
+                        android:fontFamily="@font/thesansbold"
+                        android:gravity="center"
+                        android:text="1"
+                        android:textColor="@color/colorb"
+                        android:textSize="@dimen/_15sdp" />
+
+                    <TextView
+                        android:id="@+id/txtProductDetailsIncrease"
+                        android:layout_width="@dimen/_30sdp"
+                        android:layout_height="@dimen/_30sdp"
+                        android:background="@drawable/inc_dec_bg"
+                        android:fontFamily="@font/thesansbold"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:text="+"
+                        android:textColor="@color/colorw"
+                        android:textSize="@dimen/_17sdp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_30sdp"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
 
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5">
+
+                        <Spinner
+                            android:id="@+id/spinnerProductDetails"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:fontFamily="@font/thesansbold"
+                            android:gravity="center"
+                            android:paddingLeft="@dimen/_10sdp"
+                            android:text="meduim"
+                            android:textSize="@dimen/_12sdp"></Spinner>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:fontFamily="@font/thesansbold"
+                            android:gravity="right|center"
+                            android:paddingRight="@dimen/_10sdp"
+                            android:text="الحجم"
+                            android:textSize="@dimen/_12sdp" />
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_20sdp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="@dimen/_2sdp"
+                        android:fontFamily="@font/thesansbold"
+                        android:text="جنيه"
+                        android:textSize="@dimen/_11sdp" />
+
+                    <TextView
+                        android:id="@+id/txtProductDetailsPrice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="@dimen/_5sdp"
+                        android:fontFamily="@font/thesansbold"
+                        android:textSize="@dimen/_11sdp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="@dimen/_2sdp"
+                        android:fontFamily="@font/thesansbold"
+                        android:text="السعر"
+                        android:textSize="@dimen/_11sdp" />
+
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/btnProductDetailsAddCart"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:background="@color/colorOrange"
+                    android:fontFamily="@font/thesansbold"
+                    android:text="اضف الي الطلبات"
+                    android:textColor="@color/colorw"
+                    android:textSize="@dimen/_10sdp" />
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_20sdp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="جنيه"
-                    android:fontFamily="@font/thesansbold"
-                    android:textSize="@dimen/_11sdp"
-                    android:layout_marginRight="@dimen/_2sdp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:fontFamily="@font/thesansbold"
-                    android:textSize="@dimen/_11sdp"
-                    android:layout_marginRight="@dimen/_5sdp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="السعر"
-                    android:fontFamily="@font/thesansbold"
-                    android:textSize="@dimen/_11sdp"
-                    android:layout_marginRight="@dimen/_2sdp"/>
-
-            </LinearLayout>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_25sdp"
-                android:text="اضف الي الطلبات"
-                android:textColor="@color/colorw"
-                android:fontFamily="@font/thesansbold"
-                android:textSize="@dimen/_10sdp"
-                android:background="@color/colorOrange"
-                android:layout_marginTop="@dimen/_10sdp"/>
+        </androidx.cardview.widget.CardView>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
 
+    </LinearLayout>
 
-</LinearLayout>
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="@dimen/_50sdp"
+        android:layout_height="@dimen/_50sdp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/colorOrange" />
+
+</RelativeLayout>
 
