--- a/app/src/main/res/layout/branches_fragment.xml
+++ b/app/src/main/res/layout/branches_fragment.xml
@@ -1,57 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="right">
+    android:gravity="right"
+    android:orientation="vertical">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="right">
-            <TextView
+            android:orientation="vertical">
+
+            <include layout="@layout/header_img" />
+
+
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="الفروع"
-                android:textColor="@color/colorb"
-                android:fontFamily="@font/thesansbold"
-                android:paddingRight="20dp"
-                android:textSize="18dp"
-                android:gravity="center_vertical"
-                android:layout_marginTop="20dp"
-                android:typeface="sans"
-                android:textStyle="bold"/>
+                android:layout_height="wrap_content">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layoutDirection="rtl"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="right"
+                    android:orientation="vertical">
 
-            </androidx.recyclerview.widget.RecyclerView>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:fontFamily="@font/thesansbold"
+                        android:gravity="center_vertical"
+                        android:paddingRight="20dp"
+                        android:text="الفروع"
+                        android:textColor="@color/colorb"
+                        android:textSize="18dp"
+                        android:textStyle="bold"
+                        android:typeface="sans" />
 
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recBranches"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:layout_marginTop="@dimen/_5ssp"
+                        android:layout_marginRight="@dimen/_10sdp"
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        android:layoutDirection="rtl">
+
+                    </androidx.recyclerview.widget.RecyclerView>
+
+                </LinearLayout>
+
+            </androidx.core.widget.NestedScrollView>
         </LinearLayout>
 
-        </androidx.core.widget.NestedScrollView>
-
         <ProgressBar
+            android:id="@+id/pg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:indeterminateTint="@color/colorOrange"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+            android:indeterminateTint="@color/colorOrange" />
     </RelativeLayout>
 </LinearLayout>
