--- a/app/src/main/res/layout/order_information.xml
+++ b/app/src/main/res/layout/order_information.xml
@@ -5,6 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <include layout="@layout/header_img"/>
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -113,4 +120,5 @@
 
     </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+    </LinearLayout>
 </RelativeLayout>
