--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -9,6 +9,7 @@
     android:weightSum="1">
 
     <ImageView
+        android:id="@+id/imgCartDelete"
         android:layout_width="0dp"
         android:layout_height="@dimen/_15sdp"
         android:layout_weight="0.1"
@@ -17,6 +18,7 @@
 
 
     <TextView
+        android:id="@+id/txtCartPrice"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight=".12"
@@ -28,6 +30,7 @@
         android:fontFamily="@font/thesansbold"/>
 
     <TextView
+        android:id="@+id/txtCartQuantity"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight=".12"
@@ -39,6 +42,7 @@
         android:fontFamily="@font/thesansbold"/>
 
     <TextView
+        android:id="@+id/txtCartSize"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight=".18"
@@ -50,6 +54,7 @@
         android:fontFamily="@font/thesansbold"/>
 
     <TextView
+        android:id="@+id/txtCartName"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight=".45"
