--- a/app/src/main/res/layout/ordes_fragment.xml
+++ b/app/src/main/res/layout/ordes_fragment.xml
@@ -1,100 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal">
+    tools:context=".Scenarios.ScenarioOne.Controller.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardCartRcy"
+        <include layout="@layout/header_img"/>
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="5dp"
-        app:cardElevation="5dp"
-        app:cardCornerRadius="5dp"
-        app:cardMaxElevation="5dp"
-        app:cardPreventCornerOverlap="true"
-        android:layout_margin="20dp">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp">
-        </androidx.recyclerview.widget.RecyclerView>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardCartTotal"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:elevation="5dp"
-        app:cardElevation="5dp"
-        app:cardCornerRadius="5dp"
-        app:cardMaxElevation="5dp"
-        app:cardPreventCornerOverlap="true"
-       android:layout_margin="20dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:weightSum="1"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.5"
-                android:text="odowmd"
-                android:textColor="@color/colorOrange"
+            <LinearLayout
+                android:id="@+id/linearRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:elevation="@dimen/_5sdp"
+                    app:cardCornerRadius="@dimen/_5sdp"
+                    app:cardElevation="@dimen/_5sdp"
+                    app:cardMaxElevation="@dimen/_5sdp"
+                    app:cardPreventCornerOverlap="true">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recCart"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        tools:listitem="@layout/order_item"
+                        android:padding="@dimen/_5sdp">
+
+                    </androidx.recyclerview.widget.RecyclerView>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_40sdp"
+                    android:layout_marginLeft="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_5ssp"
+                    android:layout_marginRight="@dimen/_15sdp"
+                    android:layout_marginBottom="@dimen/_15sdp"
+                    android:elevation="@dimen/_5sdp"
+                    app:cardCornerRadius="@dimen/_5sdp"
+                    app:cardElevation="@dimen/_5sdp"
+                    app:cardMaxElevation="@dimen/_5sdp"
+                    app:cardPreventCornerOverlap="true">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:weightSum="1">
+
+                        <TextView
+                            android:id="@+id/txtCartTotalPrice"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight=".5"
+                            android:fontFamily="@font/thesansbold"
+                            android:gravity="left|center"
+                            android:paddingLeft="@dimen/_40sdp"
+                            android:textColor="@color/colorOrange"
+                            android:textSize="@dimen/_11ssp" />
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight=".5"
+                            android:fontFamily="@font/thesansbold"
+                            android:gravity="center|right"
+                            android:paddingRight="@dimen/_5sdp"
+                            android:text="السعر الاجمالي"
+                            android:textColor="@color/colorOrange"
+                            android:textSize="@dimen/_11ssp" />
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+
+
+            <Button
+                android:id="@+id/btnCartAddOrder"
+                android:layout_width="@dimen/_150sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="@color/colorOrange"
                 android:fontFamily="@font/thesansbold"
-                android:paddingLeft="10dp"
-                android:gravity="center_vertical"/>
+                android:text="اضافة طلب"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/_11ssp" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.5"
-                android:text="السعر الاجمالي"
-                android:textColor="@color/colorOrange"
+            <Button
+                android:id="@+id/btnCartContinueOrder"
+                android:layout_width="@dimen/_150sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_40sdp"
+                android:background="@color/colorOrange"
                 android:fontFamily="@font/thesansbold"
-                android:paddingRight="10dp"
-                android:gravity="center_vertical"/>
-
-
+                android:text="متابعة انهاء الطلب"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/_11ssp" />
         </LinearLayout>
-
-
-    </androidx.cardview.widget.CardView>
-
+    </androidx.core.widget.NestedScrollView>
     </LinearLayout>
-
-
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="اضافة طلب"
-        android:textColor="@color/colorw"
-        android:background="@color/colorOrange"
-        android:fontFamily="@font/thesansbold"
-        android:layout_marginTop="10dp"
-        android:gravity="center"/>
-
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="متابعة لانهاء الطلب"
-        android:textColor="@color/colorw"
-        android:background="@color/colorOrange"
-        android:fontFamily="@font/thesansbold"
-        android:layout_marginTop="15dp"
-        android:gravity="center"/>
-
-
-</LinearLayout>
+</RelativeLayout>
