--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="colorw">#ffff</color>
     <color name="colorb">#020202</color>
     <color name="colorLighterGray">#CDCDCF</color>
+    <color name="colorLightGray">#B2B2B4</color>
+
 
 
 </resources>
