--- a/app/src/main/res/layout/order_information.xml
+++ b/app/src/main/res/layout/order_information.xml
@@ -1,124 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/header_img"/>
+        <include layout="@layout/header_img" />
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingRight="@dimen/_10sdp"
-        android:paddingLeft="@dimen/_10sdp">
-
-        <EditText
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:hint="الاسم"
-            android:imeOptions="actionDone"
-            android:singleLine="true"
-            android:paddingRight="@dimen/_10sdp"
-            android:fontFamily="@font/thesansbold"
-            android:textSize="@dimen/_13sdp"
-            android:gravity="right|center"/>
+            android:layout_height="match_parent">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:hint="المنطقة"
-            android:imeOptions="actionDone"
-            android:singleLine="true"
-            android:paddingRight="@dimen/_10sdp"
-            android:fontFamily="@font/thesansbold"
-            android:textSize="@dimen/_13sdp"
-            android:gravity="right|center"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/_10sdp"
+                android:paddingRight="@dimen/_10sdp">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:hint="الشارع"
-            android:imeOptions="actionDone"
-            android:singleLine="true"
-            android:paddingRight="@dimen/_10sdp"
-            android:fontFamily="@font/thesansbold"
-            android:textSize="@dimen/_13sdp"
-            android:gravity="right|center"/>
+                <EditText
+                    android:id="@+id/editOrderInformationName"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:fontFamily="@font/thesansbold"
+                    android:gravity="right|center"
+                    android:hint="الاسم"
+                    android:imeOptions="actionDone"
+                    android:paddingRight="@dimen/_10sdp"
+                    android:singleLine="true"
+                    android:textSize="@dimen/_13sdp" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:hint="المبني"
-            android:imeOptions="actionDone"
-            android:singleLine="true"
-            android:paddingRight="@dimen/_10sdp"
-            android:fontFamily="@font/thesansbold"
-            android:textSize="@dimen/_13sdp"
-            android:gravity="right|center"/>
+                <EditText
+                    android:id="@+id/editOrderInformationArea"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:fontFamily="@font/thesansbold"
+                    android:gravity="right|center"
+                    android:hint="المنطقة"
+                    android:imeOptions="actionDone"
+                    android:paddingRight="@dimen/_10sdp"
+                    android:singleLine="true"
+                    android:textSize="@dimen/_13sdp" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:hint="الدور"
-            android:imeOptions="actionDone"
-            android:singleLine="true"
-            android:paddingRight="@dimen/_10sdp"
-            android:fontFamily="@font/thesansbold"
-            android:textSize="@dimen/_13sdp"
-            android:gravity="right|center"/>
+                <EditText
+                    android:id="@+id/editOrderInformationStreet"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:fontFamily="@font/thesansbold"
+                    android:gravity="right|center"
+                    android:hint="الشارع"
+                    android:imeOptions="actionDone"
+                    android:paddingRight="@dimen/_10sdp"
+                    android:singleLine="true"
+                    android:textSize="@dimen/_13sdp" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:hint="الشقة"
-            android:imeOptions="actionDone"
-            android:singleLine="true"
-            android:paddingRight="@dimen/_10sdp"
-            android:fontFamily="@font/thesansbold"
-            android:textSize="@dimen/_13sdp"
-            android:gravity="right|center"/>
+                <EditText
+                    android:id="@+id/editOrderInformationBuilding"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:fontFamily="@font/thesansbold"
+                    android:gravity="right|center"
+                    android:hint="المبني"
+                    android:imeOptions="actionDone"
+                    android:paddingRight="@dimen/_10sdp"
+                    android:singleLine="true"
+                    android:textSize="@dimen/_13sdp" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:hint="رقم الهاتف"
-            android:imeOptions="actionDone"
-            android:singleLine="true"
-            android:paddingRight="@dimen/_10sdp"
-            android:fontFamily="@font/thesansbold"
-            android:textSize="@dimen/_13sdp"
-            android:gravity="right|center"/>
+                <EditText
+                    android:id="@+id/editOrderInformationFloor"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:fontFamily="@font/thesansbold"
+                    android:gravity="right|center"
+                    android:hint="الدور"
+                    android:imeOptions="actionDone"
+                    android:paddingRight="@dimen/_10sdp"
+                    android:singleLine="true"
+                    android:textSize="@dimen/_13sdp" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_75sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:hint="ملاحظات"
-            android:imeOptions="actionDone"
-            android:singleLine="true"
-            android:paddingRight="@dimen/_10sdp"
-            android:fontFamily="@font/thesansbold"
-            android:textSize="@dimen/_13sdp"
-            android:gravity="right|center"/>
+                <EditText
+                    android:id="@+id/editOrderInformationApartment"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:fontFamily="@font/thesansbold"
+                    android:gravity="right|center"
+                    android:hint="الشقة"
+                    android:imeOptions="actionDone"
+                    android:paddingRight="@dimen/_10sdp"
+                    android:singleLine="true"
+                    android:textSize="@dimen/_13sdp" />
 
+                <EditText
+                    android:id="@+id/editOrderInformationPhoneNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:fontFamily="@font/thesansbold"
+                    android:gravity="right|center"
+                    android:hint="رقم الهاتف"
+                    android:imeOptions="actionDone"
+                    android:paddingRight="@dimen/_10sdp"
+                    android:singleLine="true"
+                    android:textSize="@dimen/_13sdp" />
+
+                <EditText
+                    android:id="@+id/editOrderInformationNotes"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_75sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:fontFamily="@font/thesansbold"
+                    android:gravity="right|center"
+                    android:hint="ملاحظات"
+                    android:imeOptions="actionDone"
+                    android:paddingRight="@dimen/_10sdp"
+                    android:singleLine="true"
+                    android:textSize="@dimen/_13sdp" />
+
+                <Button
+                    android:id="@+id/btnOrderInformationFinish"
+                    android:layout_width="@dimen/_150sdp"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/_30sdp"
+                    android:layout_marginBottom="@dimen/_50sdp"
+                    android:background="@color/colorOrange"
+                    android:fontFamily="@font/thesansbold"
+                    android:text="متابعه لانهاء الطلب"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/_11ssp" />
+
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
     </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
-    </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="@dimen/_50sdp"
+        android:layout_height="@dimen/_50sdp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/colorOrange" />
+
 </RelativeLayout>
