--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -27,11 +27,12 @@
         android:layout_marginLeft="@dimen/_34sdp"
         android:textDirection="rtl"
         android:hint="الاسم"
-        android:imeOptions="actionDone"
+        android:imeOptions="actionNext"
         android:singleLine="true"
         android:inputType="text"
         android:textColorHint="@color/colorw"
         android:textColor="@color/colorw"
+        android:paddingLeft="@dimen/_5ssp"
         android:paddingRight="@dimen/_7sdp"
         android:textAlignment="textStart"
         android:fontFamily="@font/segoeui"
@@ -49,10 +50,11 @@
         android:hint="رقم الهاتف"
         android:inputType="phone"
         android:singleLine="true"
-        android:imeOptions="actionDone"
+        android:imeOptions="actionNext"
         android:textColorHint="@color/colorw"
         android:textColor="@color/colorw"
         android:fontFamily="@font/segoeui"
+        android:paddingLeft="@dimen/_5ssp"
         android:paddingRight="@dimen/_7sdp"
         android:textAlignment="viewEnd"
         android:backgroundTint="@color/colorw"
@@ -67,11 +69,12 @@
         android:layout_marginRight="@dimen/_34sdp"
         android:layout_marginLeft="@dimen/_34sdp"
         android:inputType="textEmailAddress"
-        android:imeOptions="actionDone"
+        android:imeOptions="actionNext"
         android:singleLine="true"
         android:hint="البريد الالكتروني"
         android:textColorHint="@color/colorw"
         android:textColor="@color/colorw"
+        android:paddingLeft="@dimen/_5ssp"
         android:paddingRight="@dimen/_7sdp"
         android:fontFamily="@font/segoeui"
         android:textAlignment="textStart"
@@ -89,10 +92,11 @@
         android:hint="كلمة المرور"
         android:inputType="textPassword"
         android:singleLine="true"
-        android:imeOptions="actionDone"
+        android:imeOptions="actionGo"
         android:textAlignment="viewEnd"
         android:textColorHint="@color/colorw"
         android:textColor="@color/colorw"
+        android:paddingLeft="@dimen/_5ssp"
         android:paddingRight="@dimen/_7sdp"
         android:fontFamily="@font/segoeui"
         android:backgroundTint="@color/colorw"
