--- a/app/src/main/res/layout/item_branches.xml
+++ b/app/src/main/res/layout/item_branches.xml
@@ -59,9 +59,10 @@
                 android:fontFamily="@font/thesansbold"
                 android:maxLines="1"
                 android:paddingRight="10dp"
+                android:paddingLeft="@dimen/_10sdp"
                 android:text="شارع فيصل"
                 android:textColor="@color/colorb"
-                android:textSize="13dp" />
+                android:textSize="15dp" />
 
             <TextView
                 android:id="@+id/txtAdress"
