--- a/app/src/main/res/layout/order_information.xml
+++ b/app/src/main/res/layout/order_information.xml
@@ -29,8 +29,9 @@
                     android:layout_marginTop="@dimen/_20sdp"
                     android:fontFamily="@font/thesansbold"
                     android:gravity="right|center"
+                    android:inputType="text"
+                    android:imeOptions="actionNext"
                     android:hint="الاسم"
-                    android:imeOptions="actionDone"
                     android:paddingRight="@dimen/_10sdp"
                     android:singleLine="true"
                     android:textSize="@dimen/_13sdp" />
@@ -43,7 +44,8 @@
                     android:fontFamily="@font/thesansbold"
                     android:gravity="right|center"
                     android:hint="المنطقة"
-                    android:imeOptions="actionDone"
+                    android:inputType="text"
+                    android:imeOptions="actionNext"
                     android:paddingRight="@dimen/_10sdp"
                     android:singleLine="true"
                     android:textSize="@dimen/_13sdp" />
@@ -56,7 +58,8 @@
                     android:fontFamily="@font/thesansbold"
                     android:gravity="right|center"
                     android:hint="الشارع"
-                    android:imeOptions="actionDone"
+                    android:inputType="text"
+                    android:imeOptions="actionNext"
                     android:paddingRight="@dimen/_10sdp"
                     android:singleLine="true"
                     android:textSize="@dimen/_13sdp" />
@@ -69,7 +72,8 @@
                     android:fontFamily="@font/thesansbold"
                     android:gravity="right|center"
                     android:hint="المبني"
-                    android:imeOptions="actionDone"
+                    android:inputType="text"
+                    android:imeOptions="actionNext"
                     android:paddingRight="@dimen/_10sdp"
                     android:singleLine="true"
                     android:textSize="@dimen/_13sdp" />
@@ -82,7 +86,8 @@
                     android:fontFamily="@font/thesansbold"
                     android:gravity="right|center"
                     android:hint="الدور"
-                    android:imeOptions="actionDone"
+                    android:inputType="text"
+                    android:imeOptions="actionNext"
                     android:paddingRight="@dimen/_10sdp"
                     android:singleLine="true"
                     android:textSize="@dimen/_13sdp" />
@@ -95,7 +100,8 @@
                     android:fontFamily="@font/thesansbold"
                     android:gravity="right|center"
                     android:hint="الشقة"
-                    android:imeOptions="actionDone"
+                    android:inputType="text"
+                    android:imeOptions="actionNext"
                     android:paddingRight="@dimen/_10sdp"
                     android:singleLine="true"
                     android:textSize="@dimen/_13sdp" />
@@ -108,7 +114,8 @@
                     android:fontFamily="@font/thesansbold"
                     android:gravity="right|center"
                     android:hint="رقم الهاتف"
-                    android:imeOptions="actionDone"
+                    android:inputType="number"
+                    android:imeOptions="actionNext"
                     android:paddingRight="@dimen/_10sdp"
                     android:singleLine="true"
                     android:textSize="@dimen/_13sdp" />
@@ -123,7 +130,8 @@
                     android:hint="ملاحظات"
                     android:imeOptions="actionDone"
                     android:paddingRight="@dimen/_10sdp"
-                    android:singleLine="true"
+                    android:singleLine="false"
+                    android:maxLines="8"
                     android:textSize="@dimen/_13sdp" />
 
                 <Button
