--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,10 @@
     <color name="colorb">#020202</color>
     <color name="colorLighterGray">#CDCDCF</color>
     <color name="colorLightGray">#B2B2B4</color>
+    <color name="colorOrange2">#F0AA2E</color>
+    <color name="colorOrange3">#f9ca76</color>
+    <color name="colorOrange1">#f05a22</color>
+
 
 
 
