--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="colorOrange2">#F0AA2E</color>
     <color name="colorOrange3">#f9ca76</color>
     <color name="colorOrange1">#f05a22</color>
+    <color name="colorTransparent">#00000000</color>
 
 
 
