--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorDarkerGray">#7D7D7D</color>
-    <color name="colorOrange">#f05a22</color>
+    <color name="colorOrange">#ec1c24</color>
     <color name="colorw">#ffff</color>
     <color name="colorb">#020202</color>
     <color name="colorLighterGray">#CDCDCF</color>
