--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,9 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -28,7 +26,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_130sdp"
                         android:scaleType="fitXY"
-                        android:src="@drawable/topimage"
+                        android:src="@drawable/topimage2"
                         android:tint="#6F000000" />
 
                     <TextView
@@ -38,17 +36,23 @@
                         android:fontFamily="@font/thesansbold"
                         android:gravity="center"
                         android:text="الفرع الاول"
+                        android:layout_marginTop="@dimen/_20sdp"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/_13ssp" />
 
+                    <LinearLayout
+                        android:layout_width="@dimen/_80sdp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        android:gravity="right"
+                        android:orientation="vertical">
                     <TextView
                         android:id="@+id/txtBranchName1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginRight="@dimen/_10sdp"
-                        android:layout_marginBottom="@dimen/_35sdp"
+                        android:layout_marginRight="@dimen/_15sdp"
                         android:gravity="center"
                         android:text="الفرع الاول"
                         android:textColor="@android:color/white"
@@ -56,16 +60,16 @@
 
                     <TextView
                         android:id="@+id/txtBranchPhone"
-                        android:layout_width="wrap_content"
+                        android:layout_width="@dimen/_70sdp"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentBottom="true"
+                        android:maxLines="3"
                         android:layout_marginRight="@dimen/_10sdp"
-                        android:layout_marginBottom="@dimen/_20sdp"
                         android:gravity="center"
+                        android:layout_marginTop="@dimen/_5sdp"
                         android:text="01141012485"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/_10ssp" />
+                    </LinearLayout>
                 </RelativeLayout>
 
                 <TextView
@@ -87,7 +91,6 @@
                     android:layout_marginRight="@dimen/_10sdp"></androidx.recyclerview.widget.RecyclerView>
 
             </LinearLayout>
-        </androidx.core.widget.NestedScrollView>
 
         <ProgressBar
             android:id="@+id/loading"
@@ -98,8 +101,8 @@
             android:indeterminateTint="@color/colorOrange" />
 
         <androidx.cardview.widget.CardView
-            android:layout_width="@dimen/_50sdp"
-            android:layout_height="@dimen/_40sdp"
+            android:layout_width="@dimen/_60sdp"
+            android:layout_height="@dimen/_50sdp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/_103sdp"
             android:scaleType="fitXY"
@@ -113,7 +116,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
-                android:src="@drawable/splash" />
+                android:src="@drawable/branchlogo" />
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
