--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/splashscreen3"
     android:orientation="vertical"
-    tools:context=".Scenarios.ScenarioTwo.Controller.SignIn"
-    android:background="@drawable/splash">
+    tools:context=".Scenarios.ScenarioTwo.Controller.SignIn">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,97 +16,110 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="@dimen/_120sdp"
-            android:layout_marginTop="@dimen/_17sdp"
-            android:src="@drawable/rostologo"/>
+            android:layout_marginTop="@dimen/_70sdp"
+            android:scaleX=".6"
+            android:scaleY=".6"
+            android:src="@drawable/logo" />
 
         <EditText
             android:id="@+id/edit_Email"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="@dimen/_90sdp"
-            android:layout_marginRight="@dimen/_33sdp"
-            android:textDirection="rtl"
             android:layout_marginLeft="@dimen/_33sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginRight="@dimen/_33sdp"
+            android:backgroundTint="@color/colorOrange"
+            android:fontFamily="@font/original"
             android:hint="الاسم"
             android:imeOptions="actionNext"
-            android:singleLine="true"
             android:inputType="text"
-            android:textAlignment="viewEnd"
-            android:textColorHint="@color/colorw"
-            android:textColor="@color/colorw"
-            android:fontFamily="@font/segoeui"
-            android:backgroundTint="@color/colorw"
             android:paddingLeft="@dimen/_5ssp"
-            android:paddingRight="@dimen/_7sdp"
-            android:textSize="17dp"/>
+            android:drawableRight="@drawable/usericon"
+            android:drawablePadding="@dimen/_5sdp"
+            android:drawableTint="@color/colorOrange"
+            android:singleLine="true"
+            android:textAlignment="viewEnd"
+            android:textColor="@color/colorw"
+            android:textColorHint="@color/colorw"
+            android:textDirection="rtl"
+            android:textSize="17dp" />
 
         <EditText
             android:id="@+id/edit_pass"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:textDirection="rtl"
-            android:layout_marginRight="@dimen/_33sdp"
             android:layout_marginLeft="@dimen/_33sdp"
-            android:paddingLeft="@dimen/_5ssp"
-            android:paddingRight="@dimen/_7sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_33sdp"
+            android:backgroundTint="@color/colorOrange"
+            android:drawableTint="@color/colorOrange"
+            android:drawablePadding="@dimen/_5sdp"
+            android:drawableRight="@drawable/lockicon"
+            android:fontFamily="@font/original"
             android:hint="كلمة المرور"
-            android:singleLine="true"
-            android:inputType="textPassword"
             android:imeOptions="actionGo"
-            android:textColorHint="@color/colorw"
-            android:textColor="@color/colorw"
-            android:fontFamily="@font/segoeui"
+            android:inputType="textPassword"
+            android:paddingLeft="@dimen/_5ssp"
+            android:singleLine="true"
             android:textAlignment="viewEnd"
-            android:backgroundTint="@color/colorw"
-            android:textSize="17dp"/>
+            android:textColor="@color/colorw"
+            android:textColorHint="@color/colorw"
+            android:textDirection="rtl"
+            android:textSize="17dp" />
 
         <Button
             android:id="@+id/btn_SignIn"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_33sdp"
-            android:text="تسجيل الدخول"
-            android:textColor="@color/colorb"
-            android:textSize="17dp"
-            android:fontFamily="@font/thesansbold"
+            android:layout_marginLeft="@dimen/_50sdp"
+            android:layout_marginTop="@dimen/_30sdp"
+            android:layout_marginRight="@dimen/_50sdp"
             android:background="@drawable/btnbg"
             android:backgroundTint="@color/colorw"
-            android:layout_marginRight="@dimen/_33sdp"
-            android:layout_marginLeft="@dimen/_33sdp"
-            android:layout_marginTop="@dimen/_15sdp"/>
+            android:fontFamily="@font/thesansbold"
+            android:text="تسجيل الدخول"
+            android:textColor="@color/normalColor"
+            android:textSize="20dp" />
 
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_40sdp"
-            android:orientation="horizontal"
-            android:weightSum="1"
-            android:layout_marginTop="@dimen/_18sdp">
+            android:layout_height="@dimen/_30sdp"
+            android:layout_marginLeft="@dimen/_50sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginRight="@dimen/_50sdp"
+            android:fontFamily="@font/thesansbold"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="@dimen/_5sdp"
+            android:text="نسيت كلمة المرور؟"
+            android:textColor="@color/colorw"
+            android:textSize="@dimen/_11sdp"
+            android:textStyle="bold" />
 
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.5"
-                android:text="نسيت كلمة السر؟"
-                android:gravity="center"
-                android:textColor="@color/colorw"
-                android:textStyle="bold"
-                android:textSize="@dimen/_14sdp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_40sdp"
+            android:fontFamily="@font/original"
+            android:gravity="center"
+            android:paddingLeft="@dimen/_5sdp"
+            android:text="ليس لديك حساب ؟"
+            android:textColor="@color/colorw"
+            android:textSize="@dimen/_13sdp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/txtRegister"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.5"
-                android:text="التسجيل؟"
-                android:gravity="center"
-                android:textColor="@color/colorw"
-                android:textStyle="bold"
-                android:textSize="@dimen/_14sdp"/>
+        <TextView
+            android:id="@+id/txtRegister"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_30sdp"
+            android:fontFamily="@font/original"
+            android:gravity="center"
+            android:text="تسجيل حساب جديد"
+            android:textColor="@color/colorOrange"
+            android:textSize="@dimen/_16sdp"
+            android:textStyle="bold" />
 
-
-        </LinearLayout>
 
     </LinearLayout>
 
