--- a/app/src/main/res/layout/branches_fragment.xml
+++ b/app/src/main/res/layout/branches_fragment.xml
@@ -18,44 +18,41 @@
             <include layout="@layout/header_img" />
 
 
-            <androidx.core.widget.NestedScrollView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent"
+                android:gravity="right"
+                android:orientation="vertical">
 
-                <LinearLayout
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:fontFamily="@font/thesansbold"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:paddingRight="20dp"
+                    android:text="الفروع"
+                    android:textColor="@color/colorb"
+                    android:textSize="18dp"
+                    android:textStyle="bold"
+                    android:typeface="sans" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recBranches"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="right"
-                    android:orientation="vertical">
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_5ssp"
+                    android:layout_marginRight="@dimen/_10sdp"
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:layoutDirection="rtl">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:fontFamily="@font/thesansbold"
-                        android:gravity="center_vertical"
-                        android:paddingRight="20dp"
-                        android:text="الفروع"
-                        android:textColor="@color/colorb"
-                        android:textSize="18dp"
-                        android:textStyle="bold"
-                        android:typeface="sans" />
+                </androidx.recyclerview.widget.RecyclerView>
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recBranches"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="@dimen/_10sdp"
-                        android:layout_marginTop="@dimen/_5ssp"
-                        android:layout_marginRight="@dimen/_10sdp"
-                        android:layout_marginBottom="@dimen/_10sdp"
-                        android:layoutDirection="rtl">
+            </LinearLayout>
 
-                    </androidx.recyclerview.widget.RecyclerView>
 
-                </LinearLayout>
-
-            </androidx.core.widget.NestedScrollView>
         </LinearLayout>
 
         <ProgressBar
