--- a/app/src/main/res/layout/header_img.xml
+++ b/app/src/main/res/layout/header_img.xml
@@ -5,14 +5,17 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="@dimen/_130sdp"
-        android:src="@drawable/topimage"
+        android:src="@drawable/topimage2"
         android:scaleType="fitXY"
         />
     <ImageView
-        android:layout_width="@dimen/_120sdp"
-        android:layout_height="@dimen/_70sdp"
-        android:src="@drawable/rostologo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/logo"
+        android:scaleY=".4"
+        android:scaleX=".5"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginRight="@dimen/_15sdp"
         />
 </RelativeLayout>
