--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -57,10 +57,10 @@
                     android:layout_height="@dimen/_23sdp"
                     android:fontFamily="@font/thesansbold"
                     android:gravity="right|center"
+                    android:maxLines="1"
                     android:paddingLeft="@dimen/_5sdp"
                     android:paddingRight="@dimen/_5sdp"
                     android:text="صيدليات"
-                    android:maxLines="1"
                     android:textColor="@color/colorb"
                     android:textSize="@dimen/_11sdp" />
 
@@ -70,11 +70,12 @@
                     android:layout_height="@dimen/_23sdp"
                     android:fontFamily="@font/segoeui"
                     android:gravity="right|center"
+                    android:maxLines="1"
                     android:paddingLeft="@dimen/_5sdp"
                     android:paddingRight="@dimen/_5sdp"
                     android:text="الادوية"
-                    android:maxLines="1"
                     android:textSize="@dimen/_11sdp" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -86,28 +87,27 @@
                         android:layout_height="@dimen/_20sdp"
                         android:fontFamily="@font/segoeui"
                         android:gravity="right|center"
+                        android:maxLines="1"
                         android:paddingLeft="@dimen/_2sdp"
                         android:paddingRight="@dimen/_2sdp"
                         android:text="صنف"
-                        android:textStyle="bold"
                         android:textColor="@color/colorOrange"
-                        android:maxLines="1"
-                        android:textSize="@dimen/_10sdp" />
+                        android:textSize="@dimen/_10sdp"
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/txtProductCount"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/_20sdp"
                         android:fontFamily="@font/segoeui"
                         android:gravity="right|center"
+                        android:maxLines="1"
                         android:paddingLeft="@dimen/_2sdp"
                         android:paddingRight="@dimen/_5sdp"
                         android:text="22"
-                        android:textStyle="bold"
                         android:textColor="@color/colorOrange"
-                        android:maxLines="1"
-                        android:textSize="@dimen/_10sdp" />
-
-
+                        android:textSize="@dimen/_10sdp"
+                        android:textStyle="bold" />
 
 
                 </LinearLayout>
